qt/webkit/gen_qgraphicswebview.h

typedef struct QAction QAction;
typedef struct QEvent QEvent;
typedef struct QGraphicsItem QGraphicsItem;
typedef struct QGraphicsSceneMouseEvent QGraphicsSceneMouseEvent;
typedef struct QGraphicsWebView QGraphicsWebView;
typedef struct QIcon QIcon;
typedef struct QMetaObject QMetaObject;
typedef struct QNetworkRequest QNetworkRequest;
typedef struct QPainter QPainter;
typedef struct QRectF QRectF;
typedef struct QSizeF QSizeF;
typedef struct QStyleOptionGraphicsItem QStyleOptionGraphicsItem;
typedef struct QUrl QUrl;
typedef struct QVariant QVariant;
typedef struct QWebHistory QWebHistory;
typedef struct QWebPage QWebPage;
typedef struct QWebSettings QWebSettings;
typedef struct QWidget QWidget;
QGraphicsWebView* QGraphicsWebView_new();
QGraphicsWebView* QGraphicsWebView_new2(QGraphicsItem* parent);
QMetaObject* QGraphicsWebView_metaObject(const QGraphicsWebView* self);
void* QGraphicsWebView_metacast(QGraphicsWebView* self, const char* param1);
int QGraphicsWebView_metacall(QGraphicsWebView* self, int param1, int param2, void** param3);
struct miqt_string QGraphicsWebView_tr(const char* s);
struct miqt_string QGraphicsWebView_trUtf8(const char* s);
QWebPage* QGraphicsWebView_page(const QGraphicsWebView* self);
void QGraphicsWebView_setPage(QGraphicsWebView* self, QWebPage* page);
QUrl* QGraphicsWebView_url(const QGraphicsWebView* self);
void QGraphicsWebView_setUrl(QGraphicsWebView* self, QUrl* url);
struct miqt_string QGraphicsWebView_title(const QGraphicsWebView* self);
QIcon* QGraphicsWebView_icon(const QGraphicsWebView* self);
double QGraphicsWebView_zoomFactor(const QGraphicsWebView* self);
void QGraphicsWebView_setZoomFactor(QGraphicsWebView* self, double zoomFactor);
bool QGraphicsWebView_isModified(const QGraphicsWebView* self);
void QGraphicsWebView_load(QGraphicsWebView* self, QUrl* url);
void QGraphicsWebView_loadWithRequest(QGraphicsWebView* self, QNetworkRequest* request);
void QGraphicsWebView_setHtml(QGraphicsWebView* self, struct miqt_string html);
void QGraphicsWebView_setContent(QGraphicsWebView* self, struct miqt_string data);
QWebHistory* QGraphicsWebView_history(const QGraphicsWebView* self);
QWebSettings* QGraphicsWebView_settings(const QGraphicsWebView* self);
QAction* QGraphicsWebView_pageAction(const QGraphicsWebView* self, int action);
void QGraphicsWebView_triggerPageAction(QGraphicsWebView* self, int action);
bool QGraphicsWebView_findText(QGraphicsWebView* self, struct miqt_string subString);
bool QGraphicsWebView_resizesToContents(const QGraphicsWebView* self);
void QGraphicsWebView_setResizesToContents(QGraphicsWebView* self, bool enabled);
bool QGraphicsWebView_isTiledBackingStoreFrozen(const QGraphicsWebView* self);
void QGraphicsWebView_setTiledBackingStoreFrozen(QGraphicsWebView* self, bool frozen);
void QGraphicsWebView_setGeometry(QGraphicsWebView* self, QRectF* rect);
void QGraphicsWebView_updateGeometry(QGraphicsWebView* self);
void QGraphicsWebView_paint(QGraphicsWebView* self, QPainter* param1, QStyleOptionGraphicsItem* options, QWidget* widget);
QVariant* QGraphicsWebView_itemChange(QGraphicsWebView* self, int change, QVariant* value);
bool QGraphicsWebView_event(QGraphicsWebView* self, QEvent* param1);
QSizeF* QGraphicsWebView_sizeHint(const QGraphicsWebView* self, int which, QSizeF* constraint);
QVariant* QGraphicsWebView_inputMethodQuery(const QGraphicsWebView* self, int query);
int QGraphicsWebView_renderHints(const QGraphicsWebView* self);
void QGraphicsWebView_setRenderHints(QGraphicsWebView* self, int renderHints);
void QGraphicsWebView_setRenderHint(QGraphicsWebView* self, int param1);
void QGraphicsWebView_stop(QGraphicsWebView* self);
void QGraphicsWebView_back(QGraphicsWebView* self);
void QGraphicsWebView_forward(QGraphicsWebView* self);
void QGraphicsWebView_reload(QGraphicsWebView* self);
void QGraphicsWebView_loadStarted(QGraphicsWebView* self);
void QGraphicsWebView_connect_loadStarted(QGraphicsWebView* self, intptr_t slot);
void QGraphicsWebView_loadFinished(QGraphicsWebView* self, bool param1);
void QGraphicsWebView_connect_loadFinished(QGraphicsWebView* self, intptr_t slot);
void QGraphicsWebView_loadProgress(QGraphicsWebView* self, int progress);
void QGraphicsWebView_connect_loadProgress(QGraphicsWebView* self, intptr_t slot);
void QGraphicsWebView_urlChanged(QGraphicsWebView* self, QUrl* param1);
void QGraphicsWebView_connect_urlChanged(QGraphicsWebView* self, intptr_t slot);
void QGraphicsWebView_titleChanged(QGraphicsWebView* self, struct miqt_string param1);
void QGraphicsWebView_connect_titleChanged(QGraphicsWebView* self, intptr_t slot);
void QGraphicsWebView_iconChanged(QGraphicsWebView* self);
void QGraphicsWebView_connect_iconChanged(QGraphicsWebView* self, intptr_t slot);
void QGraphicsWebView_statusBarMessage(QGraphicsWebView* self, struct miqt_string message);
void QGraphicsWebView_connect_statusBarMessage(QGraphicsWebView* self, intptr_t slot);
void QGraphicsWebView_linkClicked(QGraphicsWebView* self, QUrl* param1);
void QGraphicsWebView_connect_linkClicked(QGraphicsWebView* self, intptr_t slot);
struct miqt_string QGraphicsWebView_tr2(const char* s, const char* c);
struct miqt_string QGraphicsWebView_tr3(const char* s, const char* c, int n);
struct miqt_string QGraphicsWebView_trUtf82(const char* s, const char* c);
struct miqt_string QGraphicsWebView_trUtf83(const char* s, const char* c, int n);
void QGraphicsWebView_load2(QGraphicsWebView* self, QNetworkRequest* request, int operation);
void QGraphicsWebView_load3(QGraphicsWebView* self, QNetworkRequest* request, int operation, struct miqt_string body);
void QGraphicsWebView_setHtml2(QGraphicsWebView* self, struct miqt_string html, QUrl* baseUrl);
void QGraphicsWebView_setContent2(QGraphicsWebView* self, struct miqt_string data, struct miqt_string mimeType);
void QGraphicsWebView_setContent3(QGraphicsWebView* self, struct miqt_string data, struct miqt_string mimeType, QUrl* baseUrl);
void QGraphicsWebView_triggerPageAction2(QGraphicsWebView* self, int action, bool checked);
bool QGraphicsWebView_findText2(QGraphicsWebView* self, struct miqt_string subString, int options);
void QGraphicsWebView_setRenderHint2(QGraphicsWebView* self, int param1, bool enabled);
bool QGraphicsWebView_override_virtual_metaObject(void* self, intptr_t slot);
QMetaObject* QGraphicsWebView_virtualbase_metaObject(const void* self);
bool QGraphicsWebView_override_virtual_metacast(void* self, intptr_t slot);
void* QGraphicsWebView_virtualbase_metacast(void* self, const char* param1);
bool QGraphicsWebView_override_virtual_metacall(void* self, intptr_t slot);
int QGraphicsWebView_virtualbase_metacall(void* self, int param1, int param2, void** param3);
bool QGraphicsWebView_override_virtual_setGeometry(void* self, intptr_t slot);
void QGraphicsWebView_virtualbase_setGeometry(void* self, QRectF* rect);
bool QGraphicsWebView_override_virtual_updateGeometry(void* self, intptr_t slot);
void QGraphicsWebView_virtualbase_updateGeometry(void* self);
bool QGraphicsWebView_override_virtual_paint(void* self, intptr_t slot);
void QGraphicsWebView_virtualbase_paint(void* self, QPainter* param1, QStyleOptionGraphicsItem* options, QWidget* widget);
bool QGraphicsWebView_override_virtual_itemChange(void* self, intptr_t slot);
QVariant* QGraphicsWebView_virtualbase_itemChange(void* self, int change, QVariant* value);
bool QGraphicsWebView_override_virtual_event(void* self, intptr_t slot);
bool QGraphicsWebView_virtualbase_event(void* self, QEvent* param1);
bool QGraphicsWebView_override_virtual_sizeHint(void* self, intptr_t slot);
QSizeF* QGraphicsWebView_virtualbase_sizeHint(const void* self, int which, QSizeF* constraint);
bool QGraphicsWebView_override_virtual_inputMethodQuery(void* self, intptr_t slot);
QVariant* QGraphicsWebView_virtualbase_inputMethodQuery(const void* self, int query);
bool QGraphicsWebView_override_virtual_mousePressEvent(void* self, intptr_t slot);
void QGraphicsWebView_virtualbase_mousePressEvent(void* self, QGraphicsSceneMouseEvent* param1);
bool QGraphicsWebView_override_virtual_mouseDoubleClickEvent(void* self, intptr_t slot);
void QGraphicsWebView_virtualbase_mouseDoubleClickEvent(void* self, QGraphicsSceneMouseEvent* param1);
void QGraphicsWebView_virtualbase_mouseReleaseEvent(void* self, QGraphicsSceneMouseEvent* param1);